# improclib

./: CMakeLists.txt  README.md  binmorph.c  converttypes.c  dilation.inc  draw.c  ec_filter.inc  fc_filter.inc  imagefile.c  improc.pc.in  improclib.config  improclib.files  improclib.h  improclib.includes  letters.c  openmp.h  random.c  stbimpl.c
examples/: CMakeLists.txt  Readme.md  equalize.c  gauss.c  generate.c  genu16.c  objdet.c  poisson.c
